# pyshala

./: .dockerignore  .env.example  CHANGELOG.md  Caddyfile  Dockerfile  LESSONS.md  README.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  mkdocs.yml  pyproject.toml  requirements.txt  rxconfig.py
.github/workflows/: docs.yml
docs/: index.md  llms.txt
docs/api/: cli.md  python.md
docs/deployment/: cloud.md  docker.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/lessons/: best-practices.md  code-lessons.md  overview.md  quiz-lessons.md
pyshala/: __init__.py  app.py  cli.py  pyshala.py
pyshala/components/: code_editor.py  lesson_content.py  navbar.py  progress_badge.py  sidebar.py  test_results.py
pyshala/pages/: index.py  lesson.py  module.py
pyshala/services/: judge0_client.py  local_executor.py
pyshala/state/: app_state.py
tests/: __init__.py  test_app.py  test_cli.py  test_lesson_loader.py  test_local_executor.py  test_models.py
