[project]
name = "pyshala"
version = "0.1.0"
description = "A self-hosted interactive Python training platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Kedar Dabhadkar", email = "kedar.dabhadkar@gmail.com" }
]
keywords = ["python", "training", "education", "reflex", "judge0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "reflex>=0.6.0",
    "reflex-monaco>=0.0.3",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "markdown>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyshala"]
